Bug 1073702 - Check for uninitialized lexical bindings in FetchName and friends. (r=jandem)